# chimera

./: .gitignore  .gitmodules  AUDIO_PLAYBACK_IMPLEMENTATION.md  CHANGES_SUMMARY.md  CHART_FIX_SUMMARY.md  CHART_IMPROVEMENTS.md  CONSTELLATION_PLOT_INVESTIGATION.md  CONTRIBUTING.md  Cargo.toml  FINAL_PR_SUMMARY.md  IMPLEMENTATION_README.md  IMPLEMENTATION_SUMMARY.md  PR_SUMMARY.md  PULL_REQUEST_SUMMARY.md  README.md  SIGINT_THEME.md  UI_IMPROVEMENTS.md  UI_STYLE_COMPARISON.md  UI_TRANSFORMATION_SUMMARY.md  VISUAL_BEFORE_AFTER.md  VISUAL_CHANGES.md  VISUAL_CHART_FIX.md  WORKSTATION_UI_CHANGES.md  copilot_instructions.md  log  rust-toolchain.toml
chimera-cli/: Cargo.toml
chimera-cli/configs/: README.md  audio_mixing_example.toml  audio_mixing_test.toml  high_fidelity.toml  long_message.toml  noisy_channel.toml  quick_test.toml  reference.toml  simple.toml  validation_bypass.toml
chimera-cli/configs/protocol/: raman-whisper.toml
chimera-cli/src/: config.rs  frame_decoder.rs  logging.rs  main.rs  telemetry.rs
chimera-core/: Cargo.toml  IMPROVEMENTS.md  THZ_CARRIER_IMPLEMENTATION.md
chimera-core/benches/: decoding.rs  encoding.rs  ldpc.rs
chimera-core/examples/: pipeline_test.rs
chimera-core/src/: audio_generator.rs  channel.rs  config.rs  decoder.rs  diagnostics.rs  encoder.rs  errors.rs  external_audio.rs  ldpc.rs  lib.rs  logging.rs  pipeline.rs  protocol.rs  streaming.rs  thz_carriers.rs  utils.rs
chimera-core/src/diagnostics/: constellation.rs  metrics.rs  mod.rs
chimera-core/src/node_graph/: data_buffer.rs  executor.rs  mod.rs  registry.rs  structures.rs  validator.rs  wasm_api.rs
chimera-core/src/processor/: config.rs  demodulator_wrapper.rs  mod.rs  modulator_wrapper.rs  output.rs
chimera-core/src/signal_processing/: demodulation.rs  filters.rs  mod.rs  modulation.rs  spectrum.rs
chimera-core/test_data/: README.md
chimera-core/test_data/configs/: test_audio_mixing.toml  test_clean_channel.toml  test_high_noise.toml  test_long_message.toml  test_simple.toml  test_tone_mixing.toml
chimera-core/tests/: dsp_validation.rs  e2e_pipeline_tests.rs  encoder_acceptance.rs  fsk_demodulation.rs  integration_tests.rs  node_graph_integration.rs  processor_tests.rs  property_based.proptest-regressions  property_based.rs  realtime_streaming.rs  simple_decode_test.rs
chimera-core/tests/dsp_validation/: carrier.rs  channel.rs  demodulation.rs  diagnostics.rs  edge_cases.rs  fixtures.rs  frame_sync.rs  integration.rs  ldpc_fec.rs  mod.rs  modulation.rs  realtime.rs  signal_analysis.rs  thz_processing.rs
chimera-web/: .env.example  .env.production  CNAME  Cargo.toml  DEPLOYMENT_README.md  PHASE4_SUMMARY.md  PLAYWRIGHT_TESTING.md  README-MIGRATION.md  README.md  Trunk.toml  chromatic.config.json  index.html  package-lock.json  package.json  playwright.config.ts  spec.md  style.css  tsconfig.json  typedoc.json  vite.config.prod.ts  vite.config.ts  vitest.config.ts
chimera-web/.storybook/: main.ts  preview.ts
chimera-web/coverage/: index.html
chimera-web/coverage/chimera-web/: index.html  playwright.config.ts.html  vite.config.ts.html  vitest.config.ts.html
chimera-web/coverage/chimera-web/.storybook/: index.html  main.ts.html  preview.ts.html
chimera-web/coverage/chimera-web/src-react/: App.tsx.html  (+2 more)
chimera-web/dist-react/: index.html
chimera-web/dist-react/assets/: index-BgR5_y0y.css
chimera-web/docs/: ACCESSIBILITY.md  COLOR_CONTRAST.md  README.md  RESPONSIVE_DESIGN.md  TESTING_GUIDE.md
chimera-web/src/: lib.rs  model.rs  presets.rs  streaming_wasm.rs  ui.rs
chimera-web/src-react/: App.test.tsx  App.tsx  env.d.ts  types.ts
chimera-web/src-react/components/: .gitkeep  Badge.css  Badge.stories.tsx  Badge.test.tsx  Badge.tsx  Button.css  Button.stories.tsx  Button.test.tsx  Button.tsx  ConfigPanel.tsx  DebugControlPanel.tsx  FSKIndicator.tsx  FrameDecoder.tsx  LogsPanel.tsx  MessageDecoder.tsx  MetricsPanel.tsx  ModulationControlPanel.tsx  Panel.css  Panel.stories.tsx  Panel.test.tsx  Panel.tsx  Select.css  Select.stories.tsx  Select.test.tsx  Select.tsx  ThzControlPanel.tsx  Tooltip.css  Tooltip.stories.tsx  Tooltip.test.tsx  Tooltip.tsx  VisualizationPanel.tsx  index.ts
chimera-web/src-react/hooks/: .gitkeep
chimera-web/src-react/services/: .gitkeep  WASMDSPService.ts
chimera-web/src-react/store/: .gitkeep
chimera-web/src-react/styles/: accessibility.css  global.css  globals.css  responsive.css
chimera-web/src-react/test/: setup.ts
chimera-web/src-react/tests/: accessibility.test.tsx
chimera-web/src-react/types/: .gitkeep
chimera-web/src-react/utils/: .gitkeep
chimera-web/storybook-static/: iframe.html  index.json  project.json
chimera-web/storybook-static/assets/: Badge-DSBoGkZu.css  Badge.stories-CGGmR7r9.js  Button-BeCu1bGT.css  Button.stories-DKeK8KaI.js  Color-YHDXOIA2-DSJakH2T.js  DocsRenderer-CFRXHY34-EeyV61MG.js  Panel-Zc2zOKB1.css  Panel.stories-DevT-3F2.js  Select-Cwj6Pgvi.css  Select.stories-C_KoMNzf.js  Tooltip-HBEtZjwK.css  Tooltip.stories-BDczOYoO.js  entry-preview-yeDVHkSx.js  iframe-CMZbsLTk.js  preview-B4MOqpTt.js  preview-CMuDkd66.js  preview-CUWFQGkl.js
chimera-web/tests/: diagnostic_values.rs  pipeline.rs  svg_output.rs  svg_rendering.rs
chimera-web/tests/e2e/: README.md  charts.spec.ts  visual-check.spec.ts
python_src/: README.md  chimera.txt  main.py  pyproject.toml  requirements.txt  tune_gains.py
python_src/chimera/: config.py  pipeline.py  utils.py
python_src/tests/: test_utils.py
(+313 files in other folders)
