[package]
name = "chimera-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for the Chimera modulation demo"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
chimera-core = { path = "../chimera-core" }
