[package]
name = "chimera-core"
version = "0.1.0"
edition = "2021"
description = "Core modulation and decoding library for the Chimera project"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_with = "3"
ndarray = { version = "0.15", features = ["serde"] }
num-complex = "0.4"
thiserror = "1"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
getrandom = { version = "0.2", features = ["js"] }
approx = "0.5"
ldpc = "0.7"
sparse-bin-mat = "0.7"
rayon = "1.11.0"
rustfft = "6"
crossbeam = "0.8"
atomic_float = "1.0"
symphonia = { version = "0.5", features = ["mp3", "aac", "wav", "flac"] }
rubato = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
# TODO: integrate an LDPC implementation once we settle on a crate (e.g. `ldpc` or `sparse-ldpc`).
# ldpc-backend = { package = "sparse-ldpc", version = "0.4", optional = true }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "encoding"
harness = false

[[bench]]
name = "decoding"
harness = false

[[bench]]
name = "ldpc"
harness = false
