[package]
name = "chimera-web"
version = "0.1.0"
edition = "2021"
authors = ["Rowan Jones <rowan@impermanent.io>"]
description = "WebAssembly-based visualization dashboard for the Chimera modulation pipeline"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-logger = "0.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
plotters = { version = "0.3", default-features = false, features = ["svg_backend"] }
plotters-canvas = "0.3"
chimera-core = { path = "../chimera-core" }
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
	"Document",
	"AudioBuffer",
	"AudioBufferSourceNode",
	"AudioContext",
	"AudioContextState",
	"AudioDestinationNode",
	"AudioNode",
	"AudioParam",
	"AudioScheduledSourceNode",
	"HtmlCanvasElement",
	"HtmlInputElement",
	"HtmlSelectElement",
	"HtmlTextAreaElement",
	"File",
	"FileList",
	"Blob",
	"GainNode",
	"Window"
] }
rustfft = "6"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-file = "0.3"

# Used to safely escape user-provided text when embedding into generated SVG
html-escape = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

