[project]
name = "chimera"
version = "0.1.0"
description = ""
authors = [
    {name = "Rowan Jones",email = "rowan@impermanent.io"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "numpy", "cython"]
build-backend = "poetry.core.masonry.api"
